# airbnb-clone

./: .gitignore  .prettierignore  Pipfile  Pipfile1  Procfile  README.md  envcopy  manage.py  package.json  requirements.txt  runtime.txt
airbnb-backend/: README.md  pyproject.toml
airbnb-backend/bookings/migrations/: 0001_initial.py  0002_initial.py  0003_initial.py  0004_initial.py  0005_alter_booking_experience_alter_booking_room_and_more.py
airbnb-backend/categories/: serializers.py  urls.py  views.py
airbnb-backend/categories/migrations/: 0001_initial.py
airbnb-backend/config/: settings.py  urls.py
airbnb-backend/direct_messages/migrations/: 0001_initial.py  0002_initial.py  0003_alter_chattingroom_users_alter_message_room_and_more.py
airbnb-backend/experiences/migrations/: 0001_initial.py  0002_initial.py  0003_alter_experience_category_alter_experience_host_and_more.py
airbnb-backend/medias/: views.py
airbnb-backend/medias/migrations/: 0001_initial.py  0002_initial.py  0003_alter_photo_experience_alter_photo_room_and_more.py
airbnb-backend/reviews/: admin.py
airbnb-backend/reviews/migrations/: 0001_initial.py  0002_alter_review_experience_alter_review_room_and_more.py  0002_initial.py  0003_initial.py
airbnb-backend/rooms/: admin.py  models.py  serializers.py  views.py
airbnb-backend/rooms/migrations/: 0001_initial.py  0002_initial.py  0003_room_category_alter_room_amenities_alter_room_owner.py
airbnb-backend/users/: models.py
airbnb-backend/users/migrations/: 0001_initial.py
airbnb-backend/wishlists/migrations/: 0001_initial.py  (+1 more)
(+62 files in other folders)
