[tool.poetry]
name = "airbnb-clone"
version = "0.1.0"
description = ""
authors = ["sungkuk5420"]
license = "MIT"
readme = "README.md"
packages = [{include = "airbnb_clone"}]

[tool.poetry.dependencies]
python = "^3.9"
django = "^4.1.4"
pillow = "^9.3.0"
djangorestframework = "^3.14.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
